# poprawiacz-tekstu-rs

./: CHANGELOG.md  Cargo.toml  INTEGRATION_TESTS.md  README.md  install-linux.sh  poprawiacz-tekstu-rs.desktop
.github/workflows/: build.yml
examples/: streaming_demo.rs
src/: app.rs  clipboard.rs  config.rs  diff.rs  diff_gtk.rs  error.rs  hotkey.rs  hotkey_portal.rs  lib.rs  main.rs  prompts.rs  tray.rs
src/api/: anthropic.rs  deepseek.rs  gemini.rs  http_client.rs  mod.rs  openai.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/tray/: mod.rs
src/ui/: mod.rs  settings.rs  settings_gtk.rs  streaming_panel.rs
tests/: integration_api.rs  integration_config.rs  integration_workflow.rs
