[package]
name = "poprawiacz-tekstu-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.33"
eframe = "0.33"
egui-winit = "0.33"

tray-icon = "0.20"
image = "0.25"

global-hotkey = "0.6"

reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1.49", features = ["full"] }

arboard = "3.6"

futures = "0.3"
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"

similar = "2.6"

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.24"
