[package]
name = "poprawiacz-tekstu-rs"
version = "0.2.0"
edition = "2021"
description = "Multi-API text correction tool with GTK4 UI"

[dependencies]
# GTK4 UI Stack
gtk4 = "0.9"
libadwaita = "0.7"
glib = "0.20"
gio = "0.20"
gdk4 = "0.9"
pango = "0.20"

# Layer shell for Wayland (hide from dock)
gtk4-layer-shell = { version = "0.4", optional = true }

# System tray (Linux)
ksni = "0.2"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
async-channel = "2.3"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["stream", "json"] }

# Clipboard
arboard = "3.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"

# Diff highlighting
similar = "2.6"
regex = "1.10"

# Portal/Wayland support
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
futures-util = "0.3"

# Utils
once_cell = "1.21"
image = { version = "0.25", features = ["ico", "png"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Global hotkey
global-hotkey = "0.6"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.24"

[features]
default = []
wayland = ["gtk4-layer-shell"]
